package edu.uees.patrones.builder;

/** Modalidad de una tutoria. Campo opcional de {@link Reserva}. */
public enum Modalidad {
    PRESENCIAL,
    VIRTUAL
}
